tests/lexer/invalid/test_invalid_char.src
x = @;
y = #value;
z = $100;